--- a/NAMESPACE
+++ b/NAMESPACE
@@ -115,7 +115,11 @@ export(Assess2MOM)
 export(Assess2OM)
 export(Author)
 export(Awatea2OM)
+export(B0)
 export(BAM2MOM)
+export(BMSY)
+export(B_B0)
+export(B_BMSY)
 export(BevertonHolt)
 export(Biomass)
 export(CALsimp)
@@ -148,7 +152,6 @@ export(CommonName)
 export(Complexes)
 export(Control)
 export(Converge)
-export(ConvertDF)
 export(Cos_thresh_tab)
 export(Cplot)
 export(CurrentYear)
@@ -168,6 +171,7 @@ export(Data)
 export(Data2csv)
 export(DataDir)
 export(DataInit)
+export(DataTrim)
 export(Data_xl)
 export(Depletion)
 export(DiscardMortality)
@@ -178,9 +182,11 @@ export(DoubleNormalWeight)
 export(Effort)
 export(Email)
 export(Emp)
+export(FMSY)
 export(FMSYref)
 export(FMSYref50)
 export(FMSYref75)
+export(F_FMSY)
 export(Fease)
 export(Fecundity)
 export(FecundityAtAge)
@@ -195,6 +201,7 @@ export(FitMovement)
 export(Fleet)
 export(FleetNames)
 export(FracOther)
+export(GetTimeStepLH)
 export(Herm)
 export(HockeyStick)
 export(ImportSS)
@@ -207,6 +214,7 @@ export(LH2OM)
 export(LTY)
 export(Lag_Data)
 export(Landings)
+export(LastTAC)
 export(Latitude)
 export(Length)
 export(LengthModels)
@@ -214,8 +222,10 @@ export(List2Array)
 export(Longitude)
 export(ML2D)
 export(MOM_agg_fleets)
+export(MPs)
 export(MPtype)
 export(MPurl)
+export(MSE2Slick)
 export(MSEextra)
 export(MarkovFrac)
 export(Maturity)
@@ -275,6 +285,7 @@ export(RealFease)
 export(RecDevHist)
 export(RecDevInit)
 export(RecDevProj)
+export(ReduceNSim)
 export(Reference)
 export(Region)
 export(Relations)
@@ -295,9 +306,17 @@ export(ReturnEffort)
 export(ReverseList)
 export(Ricker)
 export(RunSRRfunction)
+export(SB0)
+export(SBMSY)
+export(SB_SB0)
+export(SB_SBMSY)
 export(SBiomass)
 export(SD)
+export(SP0)
 export(SPFrom)
+export(SPMSY)
+export(SP_SP0)
+export(SP_SPMSY)
 export(SProduction)
 export(SRR)
 export(SRRModels)
@@ -356,6 +375,7 @@ export(Turing)
 export(TuringMOM)
 export(UnfishedDist)
 export(Units)
+export(UpdateObject)
 export(Uses)
 export(VOI)
 export(VOI2)
@@ -375,6 +395,7 @@ export(XL2Stock)
 export(Yield)
 export(addMPs)
 export(alphaconv)
+export(apicalF)
 export(applyMP)
 export(avail)
 export(betaconv)
@@ -383,6 +404,7 @@ export(calcProb)
 export(checkMSE)
 export(curEref)
 export(cv)
+export(data2Data)
 export(derive_beta_par)
 export(doHCR)
 export(doIfreq)
