--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -95,6 +95,7 @@ Collate:
     '00_Class_om.R'
     '00_Class_hist.R'
     '00_Class_mse.R'
+    '00_Class_perrecruit.R'
     'ASAP2OM.R'
     'ApplyMPInternal.R'
     'ArrayCreate.R'
@@ -113,14 +114,11 @@ Collate:
     'CalcInitialTimeStep.R'
     'CalcMICE.R'
     'CalcNumber.R'
-    'CalcPerRecruit.R'
     'CalcPopDynamics.R'
     'CalcRecruitment.R'
-    'CalcRefPoints.R'
     'CalcRelRec.R'
     'CalcSPR.R'
     'CalcSpawnBiomass.R'
-    'CalcSurvival.R'
     'CalcUnfished.R'
     'CalcUtility.R'
     'CalculateFatAge.R'
@@ -183,10 +181,8 @@ Collate:
     'PMtable.R'
     'Parallel.R'
     'Plot.R'
-    'Populate.R'
     'PopulateFunctions.R'
     'Print.R'
-    'Project.R'
     'ProjectMP.R'
     'RcppExports.R'
     'ReduceArrayDimensions.R'
@@ -204,8 +200,6 @@ Collate:
     'SimulateDEV.R'
     'SimulateDynamics.R'
     'Sketch_Functions.R'
-    'Slick.R'
-    'SlotAccessAssign.R'
     'SpatialStock.R'
     'Splot.R'
     'Structure.R'
@@ -216,10 +210,20 @@ Collate:
     'WHAM2OM.R'
     'aaImportFrom.R'
     'applyMMP.R'
+    'fct_AccessAssign.R'
     'fct_Biomass.R'
+    'fct_CalcPerRecruit.R'
+    'fct_CalcRefPoints.R'
+    'fct_CalcSurvival.R'
+    'fct_CheckCatchFrac.R'
     'fct_DataHelpers.R'
+    'fct_IdenticalSims.R'
+    'fct_IdenticalTimeStep.R'
+    'fct_Populate.R'
+    'fct_Project.R'
     'fct_Simulate.R'
     'fct_SimulateOM.R'
+    'fct_Slick.R'
     'fct_Subset.R'
     'iSCAM2OM.R'
     'multiMSE.R'
