--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,12 +19,14 @@ export("AC<-")
 export("ASK<-")
 export("Agency<-")
 export("Ages<-")
+export("Allocation<-")
 export("ApicalF<-")
 export("ArrayFill<-")
 export("Author<-")
 export("CVDist<-")
 export("CVStay<-")
 export("CVatAge<-")
+export("CatchFrac<-")
 export("Catchability<-")
 export("Classes<-")
 export("CommonName<-")
@@ -105,6 +107,7 @@ export(ASK)
 export(Advice)
 export(Agency)
 export(Ages)
+export(Allocation)
 export(AllometricMortalityatLength)
 export(ApicalF)
 export(ArrayAdd)
@@ -139,8 +142,10 @@ export(CalcAsymptoticDist)
 export(CalcMovement)
 export(CalcRefLandings)
 export(CalcRefRemovals)
+export(CalculateMSY)
 export(Can)
 export(Cant)
+export(CatchFrac)
 export(Catchability)
 export(CheckOM)
 export(ChkYrs)
@@ -270,6 +275,7 @@ export(PWhisker)
 export(Pars)
 export(Period)
 export(PlusGroup)
+export(PopulateFleet)
 export(PopulateOM)
 export(PopulateStock)
 export(Pplot)
