--- a/NAMESPACE
+++ b/NAMESPACE
@@ -142,7 +142,6 @@ export(CalcAsymptoticDist)
 export(CalcMovement)
 export(CalcRefLandings)
 export(CalcRefRemovals)
-export(CalculateMSY)
 export(Can)
 export(Cant)
 export(CatchFrac)
@@ -282,8 +281,8 @@ export(Pplot)
 export(Pplot2)
 export(ProbStaying)
 export(Project)
-export(ProjectDEV)
 export(ProjectMOM)
+export(Project_hist)
 export(ProjectionTimeStep)
 export(R0conv)
 export(RDoubleNormal)
@@ -353,7 +352,6 @@ export(Sense)
 export(SexPars)
 export(SharePar)
 export(Simulate)
-export(SimulateDEV)
 export(SimulateMOM)
 export(SketchFun)
 export(Source)
@@ -369,6 +367,7 @@ export(SubCpars)
 export(SubOM)
 export(TAC)
 export(TACfilter)
+export(TACs)
 export(Thresh_tab)
 export(TimeSteps)
 export(TimeUnits)
