--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -69,7 +69,6 @@ Collate:
     '00_Class_selectivity.R'
     '00_Class_advice.R'
     '00_Class_ages.R'
-    '00_Class_curves.R'
     '00_Class_data.R'
     '00_Class_depletion.R'
     '00_Class_distribution.R'
@@ -79,6 +78,7 @@ Collate:
     '00_Class_fleet.R'
     '00_Class_timeseries.R'
     '00_Class_popdynamics.R'
+    '00_Class_msyrefpoints.R'
     '00_Class_refpoints.R'
     '00_Class_unfished.R'
     '00_Class_imp.R'
@@ -212,6 +212,7 @@ Collate:
     'applyMMP.R'
     'fct_AccessAssign.R'
     'fct_Biomass.R'
+    'fct_CalcMSYRefPoints.R'
     'fct_CalcPerRecruit.R'
     'fct_CalcRefPoints.R'
     'fct_CalcSurvival.R'
@@ -225,6 +226,7 @@ Collate:
     'fct_SimulateOM.R'
     'fct_Slick.R'
     'fct_Subset.R'
+    'fct_TACs.R'
     'iSCAM2OM.R'
     'multiMSE.R'
     'multiMSE_DEVCOPY.R'
