--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -64,6 +64,7 @@ Collate:
     '00_Class_CheckList.R'
     '00_Class_unions.R'
     '00_Class_child.R'
+    '00_Class_fishingmortality.R'
     '00_Class_discardmortality.R'
     '00_Class_retention.R'
     '00_Class_selectivity.R'
@@ -74,7 +75,6 @@ Collate:
     '00_Class_distribution.R'
     '00_Class_effort.R'
     '00_Class_fecundity.R'
-    '00_Class_fishingmortality.R'
     '00_Class_fleet.R'
     '00_Class_timeseries.R'
     '00_Class_popdynamics.R'
@@ -218,8 +218,10 @@ Collate:
     'fct_CalcSurvival.R'
     'fct_CheckCatchFrac.R'
     'fct_DataHelpers.R'
+    'fct_Get.R'
     'fct_IdenticalSims.R'
     'fct_IdenticalTimeStep.R'
+    'fct_ImportBAM.R'
     'fct_Populate.R'
     'fct_Project.R'
     'fct_Simulate.R'
