--- a/NAMESPACE
+++ b/NAMESPACE
@@ -113,6 +113,7 @@ export(ApicalF)
 export(ArrayAdd)
 export(ArrayDivide)
 export(ArrayMultiply)
+export(ArrayReduceDims)
 export(ArraySubtract)
 export(Assess2MOM)
 export(Assess2OM)
@@ -156,6 +157,7 @@ export(CommonName)
 export(Complexes)
 export(Control)
 export(Converge)
+export(ConvertDF)
 export(Cos_thresh_tab)
 export(Cplot)
 export(CurrentYear)
@@ -205,9 +207,19 @@ export(FitMovement)
 export(Fleet)
 export(FleetNames)
 export(FracOther)
+export(GetFecundityAtAge)
+export(GetLengthAtAge)
+export(GetMaturityAtAge)
+export(GetNaturalMortalityAtAge)
+export(GetRetentionAtAge)
+export(GetRetentionAtLength)
+export(GetSelectivityAtAge)
+export(GetSelectivityAtLength)
 export(GetTimeStepLH)
+export(GetWeightAtAge)
 export(Herm)
 export(HockeyStick)
+export(ImportBAM)
 export(ImportSS)
 export(ImportSSReport)
 export(Initial)
@@ -231,6 +243,7 @@ export(MPtype)
 export(MPurl)
 export(MSE2Slick)
 export(MSEextra)
+export(MSY)
 export(MarkovFrac)
 export(Maturity)
 export(MaturityAtAge)
@@ -320,6 +333,7 @@ export(SD)
 export(SP0)
 export(SPFrom)
 export(SPMSY)
+export(SPRMSY)
 export(SP_SP0)
 export(SP_SPMSY)
 export(SProduction)
