--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -125,8 +125,6 @@ Collate:
     'Check.R'
     'Class_data.R'
     'Condition_Obs.R'
-    'MOM_object.r'
-    'Convert.R'
     'DFO.R'
     'Data2csv.R'
     'Data_Functions.R'
@@ -152,6 +150,7 @@ Collate:
     'MMSE_Object.r'
     'MMSE_plots.R'
     'MOM_import.R'
+    'MOM_object.r'
     'MOM_plots.R'
     'MP_tuning.R'
     'MPs_Reference.R'
@@ -183,7 +182,6 @@ Collate:
     'Plot.R'
     'PopulateFunctions.R'
     'Print.R'
-    'ProjectMP.R'
     'RcppExports.R'
     'ReduceArrayDimensions.R'
     'Removals.R'
@@ -217,6 +215,12 @@ Collate:
     'fct_CalcRefPoints.R'
     'fct_CalcSurvival.R'
     'fct_CheckCatchFrac.R'
+    'fct_Convert.R'
+    'fct_ConvertOM.R'
+    'fct_ConvertOM2fleet.R'
+    'fct_ConvertOM2imp.R'
+    'fct_ConvertOM2obs.R'
+    'fct_ConvertOM2stock.R'
     'fct_DataHelpers.R'
     'fct_Get.R'
     'fct_IdenticalSims.R'
@@ -224,6 +228,8 @@ Collate:
     'fct_ImportBAM.R'
     'fct_Populate.R'
     'fct_Project.R'
+    'fct_ProjectApplyMPAdvice.R'
+    'fct_ProjectMP.R'
     'fct_Simulate.R'
     'fct_SimulateOM.R'
     'fct_Slick.R'
