--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ export("FishingMortality<-")
 export("Fleet<-")
 export("FracOther<-")
 export("Herm<-")
+export("Imp<-")
 export("Initial<-")
 export("Interval<-")
 export("Latitude<-")
@@ -158,6 +159,8 @@ export(Complexes)
 export(Control)
 export(Converge)
 export(ConvertDF)
+export(ConvertMOM)
+export(ConvertOM)
 export(Cos_thresh_tab)
 export(Cplot)
 export(CurrentYear)
@@ -219,6 +222,7 @@ export(GetTimeStepLH)
 export(GetWeightAtAge)
 export(Herm)
 export(HockeyStick)
+export(Imp)
 export(ImportBAM)
 export(ImportSS)
 export(ImportSSReport)
@@ -295,7 +299,6 @@ export(Pplot2)
 export(ProbStaying)
 export(Project)
 export(ProjectMOM)
-export(Project_hist)
 export(ProjectionTimeStep)
 export(R0conv)
 export(RDoubleNormal)
