--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -124,7 +124,6 @@ Collate:
     'CalculateFatAge.R'
     'Check.R'
     'Class_data.R'
-    'Condition_Obs.R'
     'DFO.R'
     'Data2csv.R'
     'Data_Functions.R'
@@ -139,7 +138,6 @@ Collate:
     'Fease_Functions.R'
     'Find.R'
     'Generate.R'
-    'GenerateData.R'
     'Get.R'
     'GetFatAgeArray.R'
     'HandyFunctions.R'
@@ -215,6 +213,7 @@ Collate:
     'fct_CalcRefPoints.R'
     'fct_CalcSurvival.R'
     'fct_CheckCatchFrac.R'
+    'fct_ConditionObs.R'
     'fct_Convert.R'
     'fct_ConvertOM.R'
     'fct_ConvertOM2fleet.R'
@@ -222,6 +221,7 @@ Collate:
     'fct_ConvertOM2obs.R'
     'fct_ConvertOM2stock.R'
     'fct_DataHelpers.R'
+    'fct_GenerateData.R'
     'fct_Get.R'
     'fct_IdenticalSims.R'
     'fct_IdenticalTimeStep.R'
