--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ S3method(plot,MMSE)
 S3method(plot,MSE)
 S3method(plot,OM)
 S3method(plot,Obs)
+S3method(plot,Schedule)
 S3method(plot,Stock)
 S3method(plot,character)
 S3method(plot,pars)
