--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -207,21 +207,24 @@ Collate:
     'aaImportFrom.R'
     'applyMMP.R'
     'fct_AccessAssign.R'
+    'fct_AtAge2AtSize.R'
+    'fct_AtSize2AtAge.R'
     'fct_Biomass.R'
     'fct_CalcMSYRefPoints.R'
     'fct_CalcPerRecruit.R'
     'fct_CalcRefPoints.R'
     'fct_CalcSurvival.R'
     'fct_CheckCatchFrac.R'
-    'fct_ConditionObs.R'
     'fct_Convert.R'
     'fct_ConvertOM.R'
     'fct_ConvertOM2fleet.R'
     'fct_ConvertOM2imp.R'
     'fct_ConvertOM2obs.R'
     'fct_ConvertOM2stock.R'
+    'fct_DataConditionObs.R'
+    'fct_DataGenerateHistorical.R'
+    'fct_DataGenerateProjection.R'
     'fct_DataHelpers.R'
-    'fct_GenerateData.R'
     'fct_Get.R'
     'fct_IdenticalSims.R'
     'fct_IdenticalTimeStep.R'
