--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -142,7 +142,6 @@ Collate:
     'GetFatAgeArray.R'
     'HandyFunctions.R'
     'Hist2MSE.R'
-    'Import.R'
     'MICE.R'
     'MICE_Rel.R'
     'MMSE_Object.r'
@@ -229,6 +228,7 @@ Collate:
     'fct_IdenticalSims.R'
     'fct_IdenticalTimeStep.R'
     'fct_ImportBAM.R'
+    'fct_ImportSS3.R'
     'fct_Populate.R'
     'fct_Project.R'
     'fct_ProjectApplyMPAdvice.R'
