--- a/NAMESPACE
+++ b/NAMESPACE
@@ -185,6 +185,7 @@ export(DataTrim)
 export(Data_xl)
 export(Depletion)
 export(DiscardMortality)
+export(Discards)
 export(Distribution)
 export(Dom)
 export(DoubleNormal)
@@ -211,6 +212,8 @@ export(FitMovement)
 export(Fleet)
 export(FleetNames)
 export(FracOther)
+export(GetDiscardMortalityAtAge)
+export(GetDiscardMortalityAtLength)
 export(GetFecundityAtAge)
 export(GetLengthAtAge)
 export(GetMaturityAtAge)
