--- a/NAMESPACE
+++ b/NAMESPACE
@@ -114,6 +114,7 @@ export(AllometricMortalityatLength)
 export(ApicalF)
 export(ArrayAdd)
 export(ArrayDivide)
+export(ArrayExpand)
 export(ArrayMultiply)
 export(ArrayReduceDims)
 export(ArraySubtract)
