--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -142,6 +142,7 @@ Collate:
     'GetFatAgeArray.R'
     'HandyFunctions.R'
     'Hist2MSE.R'
+    'IdenticalAge.R'
     'MICE.R'
     'MICE_Rel.R'
     'MMSE_Object.r'
