--- a/NAMESPACE
+++ b/NAMESPACE
@@ -184,6 +184,7 @@ export(DataDir)
 export(DataInit)
 export(DataTrim)
 export(Data_xl)
+export(DeleteLogs)
 export(Depletion)
 export(DiscardMortality)
 export(Discards)
