--- a/NAMESPACE
+++ b/NAMESPACE
@@ -420,6 +420,7 @@ export(XL2Fleet)
 export(XL2OM)
 export(XL2Stock)
 export(Yield)
+export(addMMPs)
 export(addMPs)
 export(alphaconv)
 export(apicalF)
