--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ S3method(plot,character)
 S3method(plot,pars)
 S3method(predict,Rel)
 S3method(print,Rel)
+S3method(print,multiHist)
 S3method(simulate,Rel)
 export(AAVE)
 export(AAVY)
