--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,7 +32,6 @@ Suggests:
     broom,
     covr,
     crayon,
-    remotes,
     DT,
     fmsb,
     kableExtra,
@@ -42,6 +41,7 @@ Suggests:
     MASS,
     mvtnorm,
     openxlsx,
+    pak,
     pbapply,
     r4ss,
     readxl,
