--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -56,3 +56,198 @@ Suggests:
 LinkingTo: Rcpp, RcppArmadillo
 BugReports: https://github.com/Blue-Matter/MSEtool/issues
 URL: https://msetool.openmse.com/
+Collate: 
+    '00_Class_CheckList.R'
+    '00_Class_unions.R'
+    '00_Class_child.R'
+    '00_Class_fishingmortality.R'
+    '00_Class_discardmortality.R'
+    '00_Class_retention.R'
+    '00_Class_selectivity.R'
+    '00_Class_advice.R'
+    '00_Class_ages.R'
+    '00_Class_data.R'
+    '00_Class_depletion.R'
+    '00_Class_distribution.R'
+    '00_Class_effort.R'
+    '00_Class_fecundity.R'
+    '00_Class_fleet.R'
+    '00_Class_timeseries.R'
+    '00_Class_popdynamics.R'
+    '00_Class_msyrefpoints.R'
+    '00_Class_refpoints.R'
+    '00_Class_unfished.R'
+    '00_Class_imp.R'
+    '00_Class_obs.R'
+    '00_Class_sexpars.R'
+    '00_Class_spatial.R'
+    '00_Class_srr.R'
+    '00_Class_maturity.R'
+    '00_Class_naturalmortality.R'
+    '00_Class_weight.R'
+    '00_Class_length.R'
+    '00_Class_stock.R'
+    'Class_definitions.R'
+    '00_Class_om.R'
+    '00_Class_hist.R'
+    '00_Class_mse.R'
+    '00_Class_perrecruit.R'
+    'ASAP2OM.R'
+    'ApplyMPInternal.R'
+    'ArrayCreate.R'
+    'ArrayOperations.R'
+    'Awatea2OM.R'
+    'BAM2OM.R'
+    'B_Low_functions.R'
+    'CalcAgeSizeKey.R'
+    'CalcApicalF.R'
+    'CalcCatch.R'
+    'CalcCurves.R'
+    'CalcEffortDist.R'
+    'CalcFatAge.R'
+    'CalcFfromCatch.R'
+    'CalcFleetFMortality.R'
+    'CalcInitialTimeStep.R'
+    'CalcMICE.R'
+    'CalcNumber.R'
+    'CalcPopDynamics.R'
+    'CalcRecruitment.R'
+    'CalcRelRec.R'
+    'CalcSPR.R'
+    'CalcSpawnBiomass.R'
+    'CalcUnfished.R'
+    'CalcUtility.R'
+    'CalculateFatAge.R'
+    'Check.R'
+    'Class_data.R'
+    'DFO.R'
+    'Data2csv.R'
+    'Data_Functions.R'
+    'Data_Plotting.R'
+    'Data_documentation.R'
+    'Data_fit_index.R'
+    'Data_make_update.R'
+    'DistributeEffort.R'
+    'DocData.R'
+    'Effort.R'
+    'Empirical_MP.R'
+    'ExtendHist.R'
+    'Fease_Functions.R'
+    'Find.R'
+    'Generate.R'
+    'Get.R'
+    'GetFatAgeArray.R'
+    'HandyFunctions.R'
+    'Hist2MSE.R'
+    'IdenticalAge.R'
+    'MICE.R'
+    'MICE_Rel.R'
+    'MMSE_Object.r'
+    'MMSE_functions.R'
+    'MMSE_plots.R'
+    'MOM_import.R'
+    'MOM_object.r'
+    'MOM_plots.R'
+    'MP_tuning.R'
+    'MPs_Reference.R'
+    'MSC.R'
+    'MSE_Plotting.R'
+    'MSE_Plotting_PMs.R'
+    'MSE_functions.R'
+    'MSEtool-package.R'
+    'MakeFleetParsList.R'
+    'MakeStockParsList.R'
+    'Misc.R'
+    'Misc_Exported.R'
+    'Misc_Internal.R'
+    'Models.R'
+    'Movement_calcs.R'
+    'NewInternalFunctions.R'
+    'Number.R'
+    'OM2Hist.R'
+    'OM_Plotting.R'
+    'OM_functions.R'
+    'OM_import.R'
+    'OM_init_doc.R'
+    'OM_plots.R'
+    'OptimiseDepletion.R'
+    'OptimiseRefYield.R'
+    'PMobjects.R'
+    'PMtable.R'
+    'Parallel.R'
+    'Plot.R'
+    'PopulateFunctions.R'
+    'Print.R'
+    'RcppExports.R'
+    'ReduceArrayDimensions.R'
+    'Removals.R'
+    'SAM2OM.R'
+    'SBiomass.R'
+    'SProduction.R'
+    'SS2Data.R'
+    'SS2MOM.R'
+    'SS2MOM_plots.R'
+    'SS2OM.R'
+    'SSinternal.R'
+    'SampleOM.R'
+    'SelectivityRetention.R'
+    'SimulateDEV.R'
+    'SimulateDynamics.R'
+    'Sketch_Functions.R'
+    'SpatialStock.R'
+    'Splot.R'
+    'Structure.R'
+    'Templates.R'
+    'Turing.R'
+    'VPA2OM.R'
+    'ValidUnits.R'
+    'WHAM2OM.R'
+    'aaImportFrom.R'
+    'applyMMP.R'
+    'fct_AccessAssign.R'
+    'fct_AtAge2AtSize.R'
+    'fct_AtSize2AtAge.R'
+    'fct_Biomass.R'
+    'fct_CalcMSYRefPoints.R'
+    'fct_CalcPerRecruit.R'
+    'fct_CalcRefPoints.R'
+    'fct_CalcSurvival.R'
+    'fct_CheckCatchFrac.R'
+    'fct_CheckDepletionOpt.R'
+    'fct_Convert.R'
+    'fct_ConvertOM.R'
+    'fct_ConvertOM2fleet.R'
+    'fct_ConvertOM2imp.R'
+    'fct_ConvertOM2obs.R'
+    'fct_ConvertOM2stock.R'
+    'fct_DataConditionObs.R'
+    'fct_DataGenerateHistorical.R'
+    'fct_DataGenerateProjection.R'
+    'fct_DataHelpers.R'
+    'fct_Get.R'
+    'fct_IdenticalSims.R'
+    'fct_IdenticalTimeStep.R'
+    'fct_ImportBAM.R'
+    'fct_ImportSS3.R'
+    'fct_Logs.R'
+    'fct_Populate.R'
+    'fct_Project.R'
+    'fct_ProjectApplyMPAdvice.R'
+    'fct_ProjectMP.R'
+    'fct_Simulate.R'
+    'fct_SimulateOM.R'
+    'fct_Slick.R'
+    'fct_Subset.R'
+    'fct_TACs.R'
+    'fct_plot_Schedule.R'
+    'iSCAM2OM.R'
+    'multiMSE.R'
+    'multiMSE_DEVCOPY.R'
+    'multiMSE_internal.R'
+    'multi_q_estimation.R'
+    'popdyn.R'
+    'popdynOneMICEDEV.R'
+    'popdyn_MICE.R'
+    'runMSE.R'
+    'spatial_targ_opt.R'
+    'utils.R'
