--- a/NAMESPACE
+++ b/NAMESPACE
@@ -362,6 +362,7 @@ export(SampleFleetPars)
 export(SampleImpPars)
 export(SampleObsPars)
 export(SampleStockPars)
+export(Save)
 export(Seed)
 export(Selectivity)
 export(SelectivityAtAge)
