--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: MSEtool
 Title: Management Strategy Evaluation Toolkit
-Version: 3.7.5
+Version: 4.0.9999
 Authors@R: c(
   person("Adrian", "Hordyk", email = "adrian@bluematterscience.com", role = c("aut", "cre")),
   person("Quang", "Huynh", email = "quang@bluematterscience.com", role = "aut"), 
@@ -230,6 +230,7 @@ Collate:
     'fct_ImportBAM.R'
     'fct_ImportSS3.R'
     'fct_Logs.R'
+    'fct_Misc.R'
     'fct_Populate.R'
     'fct_Project.R'
     'fct_ProjectApplyMPAdvice.R'
