--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,6 +57,7 @@ export("Maturity<-")
 export("MaxAge<-")
 export("MeanAtAge<-")
 export("MeanAtLength<-")
+export("MinAge<-")
 export("Misc<-")
 export("Model<-")
 export("Movement<-")
@@ -158,6 +159,7 @@ export(ChooseM)
 export(ChooseSelect)
 export(Classes)
 export(CommonName)
+export(CompareBAM)
 export(Complexes)
 export(Control)
 export(Converge)
@@ -215,6 +217,7 @@ export(FitMovement)
 export(Fleet)
 export(FleetNames)
 export(FracOther)
+export(GetBAMOutput)
 export(GetDiscardMortalityAtAge)
 export(GetDiscardMortalityAtLength)
 export(GetFecundityAtAge)
@@ -246,6 +249,7 @@ export(Latitude)
 export(Length)
 export(LengthModels)
 export(List2Array)
+export(ListBAMStocks)
 export(Longitude)
 export(ML2D)
 export(MOM_agg_fleets)
@@ -267,6 +271,7 @@ export(MaturityModelsWeight)
 export(MaxAge)
 export(MeanAtAge)
 export(MeanAtLength)
+export(MinAge)
 export(Misc)
 export(Model)
 export(MortalityatAge)
